# inhibitor

./: .gitignore  Cargo.toml  README.md
db/migrations/: 1_init.sql
migrations/: 0001_init.sql  0002_fake_data.sql
src/: database.rs  error.rs  main.rs
src/api/: error.rs  mod.rs
src/database/: mod.rs
src/handlers/: startpage.rs
src/league_api/: mod.rs
src/routes/: mod.rs
src/routes/handlers/: login.rs  mod.rs
src/web/: error.rs  mod.rs  mw_auth.rs
src/web/handlers/: login.rs  mod.rs  startpage.rs
src/web/handlers/auth/: accounts.rs  mod.rs  profile.rs
src/web/handlers/auth/accounts/: games.rs
src/web/handlers/authorized/: mod.rs  profile.rs
src/web/handlers/public/: login.rs  mod.rs  startpage.rs
src/web/middleware/: mod.rs  token.rs
src/web/mw_auth/: auth_token.rs
static/stylesheets/: main.css
templates/: games.html  get_profile.html  index.html  logged_in.html  profile.html  startpage.html
tests/: tests.sql
