[package]
name = "inhibitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
sqlx = {version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"]}
tokio = { version = "1.36.0", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["fs"] }
